getUserById route was added, changed swagger docs
