# src/modules/user/user.controllers.ts
@@ -22,4 +22,22 @@ export class UserController {
       logger.error(`${error}, - 'error in controller'`);
     }
   }
+
+  async getUserById(req: Request, res: Response): Promise<void> {
+    const { id } = req.params;
+    if (!id) {
+      res.status(400).json({ message: 'User ID not found' });
+    }
+    try {
+      const user = await this.userService.getUserById(id);
+
+      if (!user) {
+        res.status(404).json({ message: 'User not found' });
+      }
+
+      res.json(user);
+    } catch (error) {
+      logger.error(`${error}, - 'error in controller'`);
+    }
+  }
 }
